# posetail

./: .gitignore  big_bsub.sh  big_bsub_finetuning.sh  big_bsub_pretraining.sh  big_bsub_scorer.sh  eval_multicam.py  inference.py  inference_dataset.py  inference_metrics.py  inference_video.py  pyproject.toml  release.sh  render_video.py  run_batch_inference.py  server.py  setup.py  smoke_memory.py  train.py  train.sh  train_scorer.py  train_scorer_script.sh  train_script.sh  train_utils.py  viz3d.py  viz_predictions.py  viz_utils.py
cluster/: big_bsub.sh  big_bsub_finetuning.sh  big_bsub_pretraining.sh  big_bsub_scorer.sh  train_scorer_script.sh  train_script.sh
configs/: config_encoder_3d.toml  config_encoder_3d_2d.toml  config_encoder_3d_finetuning.toml  config_encoder_3d_finetuning_2d.toml  config_encoder_3d_finetuning_h100.toml  config_encoder_3d_l4.toml  config_encoder_3d_queue.toml  config_encoder_finetune.toml  config_encoder_grid.toml  config_encoder_gridnorm.toml  config_encoder_gridresid.toml  config_encoder_gridresid_finetune.toml  config_encoder_gridresid_learnscale.toml  config_encoder_memory.toml  config_encoder_pretrain.toml  config_ft_muonsf_8gpu.toml  config_ft_muonsf_8gpu_2.toml  config_ft_muonsf_8gpu_3.toml  config_ft_muonsf_8gpu_4.toml  config_ft_muonsf_8gpu_5.toml  config_ft_muonsf_8gpu_5b.toml  config_scorer.toml  config_tapnext_3d.toml
configs/ablations/: camera_self_attention_false.toml  finetuned_kubric_only.toml  finetuned_odyssey_only.toml  latent_dim_1024.toml  latent_dim_256.toml  pretrained_kubric_only.toml  pretrained_odyssey_only.toml  video_encoder_size_base.toml  video_encoder_size_giant.toml  video_encoder_size_gigantic.toml
cotracker_baseline/: cotracker_all.sh  cotracker_inference.py  cotracker_metrics.py  cotracker_triangulate.py
parity_check/: smoke_learnable_scale.py  smoke_scorer.py  test_scorer_units.py
posetail/: __init__.py
posetail/datasets/: inference_dataset.py  posetail_dataset.py  scorer_corruption.py
posetail/inference/: inference_utils.py
posetail/posetail/: cube.py  encoder_decoder.py  eval_metrics.py  losses.py  losses_scorer.py  muon.py  networks.py  pscan.py  scorer_encoder.py  tapnext.py  tapnext_lru_modules.py  tracker.py  tracker_encoder.py  tracker_tapnext.py  train_utils.py  utils.py  vjepa2.py
scripts/: combine_cam_metrics.py  combine_metrics.py  estimate_grid_radius.py  estimate_scale_stats.py  eval_testset_metrics.py  gridnorm_toy.py  inference.py  inference_dataset.py  inference_metrics.py  inference_video.py  render_video.py  run_batch_inference.py  run_cam_experiment.sh  run_inference.sh  run_metrics.sh  speed_target_coverage.py  submit_testset_metrics.py  viz3d.py
server/: SERVER.md  example_client.py  server.py
tests/: test_grid_decode_space.py
