[build-system]
requires = ["setuptools>=64,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posetail"
version = "0.1.0"
dependencies = [
    "aniposelib>=0.7.0",
    "easydict==1.13",
    "einops==0.7.0",
    "opencv-python==4.9.0.80",
    "toml==0.10.2",
    "wandb==0.19.5",
    "lightning>=2.5.6,<3",
    "rerun-sdk[notebook]<=0.22.1",
    "numpy==1.26",
    "imgaug", "imagecorruptions",
    "setuptools<81",
    "schedulefree", "decord", "tqdm",
    "fastapi>=0.111", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9",
    "requests>=2.31",
    ]
requires-python = ">=3.11"
description = "a model for tracking 2d or 3d animal pose through time"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["3d point tracking", "2d point tracking", "multi-view tracking", "pose estimation"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3'
]

# [project.optional-dependencies]
# Backbones for the legacy Tracker network (posetail.posetail.tracker.Tracker),
# which is no longer used by the default TrackerEncoder/ScorerEncoder path. Only
# needed if you build the old sam2/hiera-based feature extractors.
#
# Commented out because PyPI forbids direct URL (git) dependencies in uploaded
# distribution metadata, which would make `twine upload` fail. If you need the
# legacy path, install sam2 manually:
#     pip install "hiera-transformer" "sam-2 @ git+https://github.com/facebookresearch/sam2.git"
# legacy-tracker = [
#     "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
#     "hiera-transformer",
# ]

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.34" }

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/posetail"

[tool.setuptools]
# `posetail` (now a real package via posetail/__init__.py) plus its subpackages are picked
# up by setup.py's find_packages(). These are the top-level helper modules that live at the
# repo root (outside the package) but are imported bare (e.g. `from train_utils import ...`,
# `from inference_video import ...`); list them so an install exposes them too.
py-modules = ["train_utils", "inference_video", "inference_utils"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
posetail = { path = ".", editable = true }
torch = { version = "<3", index="https://download.pytorch.org/whl/cu128"}
torchvision = {version ="*", index="https://download.pytorch.org/whl/cu128"}
torchaudio = {version ="*", index="https://download.pytorch.org/whl/cu128"}

[tool.pixi.environments]
default = { solve-group = "default" }
# gpu = { features = ["gpu"], solve-group = "default" }
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
cuda-toolkit = "12.8.*"
numpy = "==1.26"
scipy = "<1.17"
setuptools = "<81"
pip = "*"

[tool.pixi.feature.dev.dependencies]
python-build = "*"
twine = "*"
matplotlib = "*"
ipython = "*"
notebook = "*"
ipympl = "*"
av = "*"
hdf5storage = "*"
